fixed spacing

--- a/styles/doc.css
+++ b/styles/doc.css
@@ -68,8 +68,8 @@
 
 code {
     font-family: Monaco, monospace;
-    /*font-size: $base-font-size;
-    line-height: 100%;*/
+    /*font-size: $base-font-size;*/
+    line-height: 115%;
     background-color: #eee;
     /*padding: 1.2em;*/
     letter-spacing: -0.05em;
